<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.magi.map.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_weather"
                android:layout_width="305dp"
                android:layout_height="40dp"
                android:gravity="left"
                android:textSize="15sp"
                android:text="等待加载……"/>
            <Button
                android:id="@+id/btn_weather"
                android:layout_width="55dp"
                android:layout_height="40dp"
                android:text="@string/btn_weather"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_toRightOf="@+id/tv_weather"/>
        </RelativeLayout>
        <com.baidu.mapapi.map.MapView
            android:id="@+id/bmapView"
            android:layout_width="match_parent"
            android:layout_height="530dp"
            android:clickable="true"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="?android:attr/buttonBarStyle">
            <Button
                android:id="@+id/btn_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_location"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btn_satellite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/satellite"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btn_traffic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/traffic"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btn_goSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_goSearch"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
