<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.magi.map.SearchActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_search"
                android:layout_width="220dp"
                android:layout_height="48dp"
                android:hint="@string/et_search_hint"
                android:maxLines="1"/>
            <Button
                android:id="@+id/btn_nearbySearch"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/et_search"
                android:layout_toEndOf="@+id/et_search"
                android:text="@string/btn_nearbySearch"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btn_citySearch"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/btn_nearbySearch"
                android:layout_toEndOf="@+id/btn_nearbySearch"
                android:text="@string/btn_citySearch"
                style="?android:attr/buttonBarButtonStyle"/>
            <ListView
                android:id="@+id/lv_result"
                android:layout_width="match_parent"
                android:layout_height="485dp"
                android:layout_marginTop="48dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp">
            </ListView>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/totalNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/totoalPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/currPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="?android:attr/buttonBarStyle">
            <Button
                android:id="@+id/btn_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_first"
                android:visibility="invisible"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btn_pre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_pre"
                android:visibility="invisible"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_next"
                android:visibility="invisible"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btn_last"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_last"
                android:visibility="invisible"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
